data/derived/comb/progs/unify/prog2547.ml.out
Characters 43-49:
  List.map sepConcat ("; ");;
                     ^^^^^^
Error: This expression has type string but an expression was expected of type
         string list
